[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["cloudwatch_logs"] }
lambda_runtime = "0.13.0"
lambda_http = { version = "0.14.0", features = ["apigw_http"] }
tokio = { version = "1.43.0", features = ["macros"] }
futures-util = "0.3.31"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["auth"] }
serde = { version = "1.0.218", features = ["derive"] }
typed-builder = "0.20.0"
aws-smithy-types = "1.2.13"
aws-sdk-secretsmanager = "1.64.0"
aws-sdk-bedrockruntime = "1.75.0"
aws-sdk-dynamodb = "1.66.0"
aws-config = "1.5.17"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
chrono = "0.4.40"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1.1.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
tracing = "0.1.41"
