[package]
name = "lambda"
version = "0.1.1"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.1", default-features = false, features = ["cloudwatch_logs"] }
lambda_runtime = "1.0.1"
lambda_http = { version = "1.0.1", features = ["apigw_http"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros"] }
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["auth"] }
serde = { version = "1.0.228", features = ["derive"] }
typed-builder = "0.23.2"
aws-smithy-types = "1.3.4"
aws-sdk-secretsmanager = "1.95.0"
aws-sdk-bedrockruntime = "1.118.0"
aws-sdk-dynamodb = "1.100.0"
aws-config = "1.8.11"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
chrono = "0.4.42"
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1.1.5"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
tracing = "0.1.41"
